--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pg": "^8.11.1",
+    "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "prisma": "^5.1.1"
   }
 }
